// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select has a helptext 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div><span class="form-text">Type something</span>
  </div>
</div>
`;

exports[`Select has a key 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has a label 1`] = `
<div class="react-component-adapter">
  <div class="form-group">
    <p class="ddm-label">label</p><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has a placeholder 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has a predefinedValue 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has a spritemap 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has a value 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has an id 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger" id="ID">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select has class dropdown-opened when it's opened 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select is closed by default 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select is not editable 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select is not required 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select puts an asterisk when field is required 1`] = `
<div class="react-component-adapter">
  <div class="form-group">
    <p class="ddm-label">This is the label<span class="reference-mark"><svg class="lexicon-icon lexicon-icon-asterisk" role="presentation">
          <use xlink:href="icons.svg#asterisk"></use>
        </svg></span></p><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select renders Label if showLabel is true 1`] = `
<div class="react-component-adapter">
  <div class="form-group">
    <p class="ddm-label">text</p><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select renders no options when options come empty 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select renders options 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Select renders the dropdown with search when there are more than six options 1`] = `
<div class="react-component-adapter">
  <div class="form-group"><select aria-label="select" hidden="" class="form-control form-control">
      <option disabled="" value=""></option>
    </select>
    <div class="form-builder-select-field input-group-container" style="">
      <ul class="form-control results-chosen select-field-trigger">
        <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container"><svg class="lexicon-icon lexicon-icon-caret-double" role="presentation">
            <use xlink:href="#caret-double"></use>
          </svg></a>
      </ul>
    </div>
  </div>
</div>
`;
